	* Added 'WHInterfaceMacAddress()' and 'WHMacAddressText()' functions
	in 'src/wh/whnetwork.cpp' and 'wrc/wh/whnetwork.h'.
2016-01-28 Fred Gleason <fredg@paravelsystems.com>
	* Modified the 'Upgrade' service to use '--oldpackage' instead of
	'--force' when invoking rpm(8).
2016-01-28 Fred Gleason <fredg@paravelsystems.com>
	* Incremented the package version to 0.8.5.
2016-01-31 Fred Gleason <fredg@paravelsystems.com>
	* Added 'WHInterfaceInfo()', 'WHInterfaceIPv4Address()' and
	'WHInterfaceIPv4Netmask()' functions in 'wh/whnetwork.cpp' and
	'wh/whnetwork.h'.
	* Added a 'WHConfig' class in 'src/wh/whconfig.cpp' and
	'src/wh/whconfig.h'.
2016-01-31 Fred Gleason <fredg@paravelsystems.com>
	* Incremented the API version to 1:0:1.
	* Incremented the package version to 0.8.6.
2016-01-31 Fred Gleason <fredg@paravelsystems.com>
	* Fixed a bug in 'webhost.spec.in' that broke the 'make rpm'
	target.
2016-01-31 Fred Gleason <fredg@paravelsystems.com>
	* Incremented the package version to 0.8.7.
2016-02-03 Fred Gleason <fredg@paravelsystems.com>
	* Modified the 'WHCgiPost::sendUpgradeCommand()' method to
	wait until package upgrade is complete before returning.
	* Added a 'filedrop.cgi' CGI test in 'src/tests/'.
2016-02-03 Fred Gleason <fredg@paravelsystems.com>
	* Incremented the package version to 0.8.8.
2016-02-19 Fred Gleason <fredg@paravelsystems.com>
	* Add a 'WHHttpServer' class in 'src/wh/whhttpserver.cpp' and
	'src/wh/whhttpserver.h'.
	* Add a 'WHHttpRequest' class in 'src/wh/whhttprequest.cpp' and
	'src/wh/whhttprequest.h'.
2016-02-22 Fred Gleason <fredg@paravelsystems.com>
	* Added a 'WHHttpServer::addStaticSource()' method in
	'src/wh/whhttpserver.cpp' and 'src/wh/whhttpserver.h'.
2016-02-22 Fred Gleason <fredg@paravelsystems.com>
	* Added a 'WHHttpServer::addCgiSource()' method in
	'src/wh/whhttpserver.cpp' and 'src/wh/whhttpserver.h'.
2016-02-23 Fred Gleason <fredg@paravelsystems.com>
	* Extended CGI support to include POST method calls.